# train-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yaml
data/: error1.json  error2.json  output.json  train_data1.json  train_data2.json  train_data3.json
src/: main.rs  model.rs  server.rs
static/: index.html  script.js  styles.css
