[package]
name = "train-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
bitflags = { version = "2.9.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "net"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
